# SimpleStudentManagementSystem

./: CMakeLists.txt  main.c
entity/: classes.h  counsellors.h  grade.h  guidance_director.h  teacher.h
service/: grade_service.c  guidance_director_service.c  teacher_service.c  users.c
service/serviceHead/: grade_service.h  guidance_director_service.h  teacher_service.h
utils/: tool.c
